--- a/current/assets/main/less/sidebar.less
+++ b/current/assets/main/less/sidebar.less
@@ -9,8 +9,10 @@
 	-webkit-border-radius: 2px; /* Saf3+, Chrome */
 	-khtml-border-radius: 2px; /* Konqueror */
 	border-radius: 2px; /* Standard. IE9 */
-
+	
 	background: #e4d7b0;
+	border: 0;
+	border-color: transparent;
 	color: #000;
 	font: bold 13px/25px Helvetica, Arial, sans-serif;
 	margin-bottom: 10px;
